...
        self.model = model
        self.userInterface = userInterface
        self.searchUseCaseFactory = searchUseCaseFactory
        self.mainUseCaseFactory = mainUseCaseFactory
        self.mainDependencyFactory = mainDependencyFactory
        
        self.userInterface.accessibilityLabel = "Search Results"
        
        guard let ds = userInterface.dataSource,
              let del = userInterface.delegate else {
            fatalError("Unable to coompose table view")
        }
        self.dataSource = ds
...
extension MainViewController { // MARK: - Helpers
    private func populateNavBar() {
        navigationItem.rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: .search,
                                                            target: model.uxResponder,
                                                            action: #selector(presentNewSearch))
        
        let historyTitle = NSLocalizedString("Saved Searches",
                                             comment: "Saved Searches")
        navigationItem.leftBarButtonItem = UIBarButtonItem(title: historyTitle,
                                                           style: .plain,
                                                           target: self,
                                                           action: #selector(presentSavedSearches))
    }
...
