...

class MainTableViewCell: UITableViewCell {
    private var hierarchyNotReady = true
    
    var nameLabel: UILabel = {
        let label = UILabel(frame: .zero)
        label.accessibilityIdentifier = "name label"
        label.translatesAutoresizingMaskIntoConstraints = false
        label.font = UIFont.boldSystemFont(ofSize: 18)
        label.numberOfLines = 0
        return label
    }()
    
...
